Unreviewed, speculative fixes for multiple build breakage https://bugs.webkit.org/show_bug.cgi?id=269456 rdar://123004819

* Source/WebCore/Modules/applepay/ApplePayDisbursementPaymentRequest.h:
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::annotationIsExternalLink):

Canonical link: https://commits.webkit.org/274716@main